--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Household finance app for budgeting, planning, and tracking transactions"
 requires-python = ">=3.12"
 dependencies = [
+    "email-validator>=2.3.0",
     "flask>=3.1.3",
     "flask-login>=0.6.3",
     "flask-migrate>=4.1.0",
